# Eudaimonia-

./: .dockerignore  .env  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DESIGN_OVERVIEW.md  Dockerfile  LICENSE  MODES_SPEC.md  Makefile  README.md  ROUTING_MATRIX.md  config.yaml  eslint.config.cjs  eudaimonia.py  eval_out.jsonl  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  codeql.yml  docs.yml  evals.yml  release.yml  tests.yml
Create docs/: README.md
backend/: __init__.py  mcp_controller.py
backend/api/: __init__.py  stats.py  tasks.py
backend/config/: secure_loader.py
backend/telemetry/: metrics.py  telemetry.py
codex/modes/: default.yaml  empathy.yaml  guardian.yaml
codex/schemas/: modes.schema.yaml
config/: router.yaml
demo/confirmation-ui/: confirmation_ui.py
demo/metronome-stub/: metronome_stub.py
demo/sms-logic/: requirements.txt  sms_logic.py
docs/: ABL_Master_Directive.md  ABL_Structure.md  BUDGET_POLICY.md  FORMAT_CI.md  README.md.  SECURITY.md  TELEMETRY_SCHEMA.md  api.md  guardian_rules.md  index.md  memory_store.md  modes.md  quickstart.md  state_persistence.md
eudaimonia/: __init__.py  api.py  main.py
eudaimonia-alpha/app/: README.md
eudaimonia-alpha/backend/: main.py
eudaimonia-alpha/demo/: README.md
eudaimonia-alpha/docs/: SOP.md
eudaimonia/agents/: __init__.py  empathy_checkin_agent.py  guardian_pulse_agent.py  morning_briefing_agent.py
eudaimonia/cli/: main_loop.py
eudaimonia/config/: guardian_rules.yml  voice_profiles.json
eudaimonia/core/: __init__.py  abl_config.json  abl_core.py  base_mode.py  eudaimonia.py  (+7 more)
scripts/: aggregate_daily.py
stub-api/: main.py
svc/: app.py  cbreaker.py  logging_mw.py
tests/: test_abl_core.py  test_api.py  test_dialogue_loop.py  test_memory.py  test_memory_store.py  test_memory_store_security.py  test_mode_manager.py  test_modes.py  test_rules.py  test_tasks.py  test_telemetry.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
web/: index.html
(+15 files in other folders)
