[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eudaimonia-mcp"
version = "0.2.0"
description = "Modular AI assistant with dynamic modes and Bahamian cultural tone."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Eudaimonia Team"}]
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.103.0",
    "uvicorn>=0.23.0",
    "pytest>=7.0",
    "httpx>=0.24.0",
    "tinydb>=4.7.0",
    "PyYAML>=6.0",
    "opentelemetry-api>=1.18.0",
    "opentelemetry-sdk>=1.18.0",
    "langfuse>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/OWNER/Eudaimonia-"
Documentation = "https://OWNER.github.io/Eudaimonia-/"

[project.optional-dependencies]
docs = ["mkdocs-material"]

[tool.setuptools.packages.find]
include = ["eudaimonia", "backend"]
